--- a/src/src.vcxproj
+++ b/src/src.vcxproj
@@ -25,6 +25,7 @@
     <ProjectGuid>{08614FFC-DC72-4C5C-8706-2FC1A3F2B78F}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>src</RootNamespace>
+    <ProjectName> </ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
